fix: ui button alignment changed

--- a/popup.css
+++ b/popup.css
@@ -53,6 +53,11 @@ button {
   transition: background-color 0.3s;
 }
 
+#clearSavedProject {
+  background: rgb(201, 41, 41);
+}
+
+
 button:hover {
   background-color: #45a049;
 }
